[package]
name = "disastle-ai-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disastle-rust = { git = "https://github.com/nthieu173/disastle-rust.git" }
disastle-castle-rust = { git = "https://github.com/nthieu173/disastle-castle-rust.git"}
rand = "0.8"